// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDiveSiteListItem component will render with full site data 1`] = `
"<li class="space-y-2 flex gap-2 items-center">
  <div><button class="text-grey-950 p-2 m-0 text-sm border-1 border-grey-800 shadow-sm shadow-grey-800 rounded-md disabled:text-grey-500 bg-secondary hover:bg-secondary-hover" data-testid="select-site-4f5fd49f-734a-4bb7-9912-d58b0f4d61ef" type="button">
      <!--v-if--> Select
    </button></div>
  <div class="grow space-y-2">
    <div class="flex align-baseline justify-between"><button data-testid="site-name-4f5fd49f-734a-4bb7-9912-d58b0f4d61ef">
        <p class="text-xl font-title capitalize hover:text-link-hover">Awesome Site 7</p>
      </button>
      <p class="flex gap-2">
      <div readonly="">4.2</div>
      </p>
    </div>
    <div class="">
      <p class="text-sm text-justify italic">This site is blue.</p>
    </div>
    <div class="flex justify-between text-sm">
      <div class="text-center"><label class="font-bold">Location</label>
        <p>Somewhere</p>
      </div>
      <div class="text-center"><label class="font-bold">Depth</label>
        <p><span>10.00 m</span><span>Unspecified</span></p>
      </div>
      <div class="text-center"><label class="font-bold">Free to dive</label>
        <p>Yes</p>
      </div>
      <div class="text-center"><label class="font-bold">Shore dive</label>
        <p>Yes</p>
      </div>
    </div>
  </div>
</li>"
`;

exports[`SelectDiveSiteListItem component will render with partial dive site 1`] = `
"<li class="space-y-2 flex gap-2 items-center">
  <div><button class="text-grey-950 p-2 m-0 text-sm border-1 border-grey-800 shadow-sm shadow-grey-800 rounded-md disabled:text-grey-500 bg-secondary hover:bg-secondary-hover" data-testid="select-site-4f5fd49f-734a-4bb7-9912-d58b0f4d61ef" type="button">
      <!--v-if--> Select
    </button></div>
  <div class="grow space-y-2">
    <div class="flex align-baseline justify-between"><button data-testid="site-name-4f5fd49f-734a-4bb7-9912-d58b0f4d61ef">
        <p class="text-xl font-title capitalize hover:text-link-hover">Awesome Site 7</p>
      </button>
      <!--v-if-->
    </div>
    <div class="">
      <!--v-if-->
    </div>
    <div class="flex justify-between text-sm">
      <div class="text-center"><label class="font-bold">Location</label>
        <p>Somewhere</p>
      </div>
      <div class="text-center"><label class="font-bold">Depth</label>
        <p>
          <!--v-if--><span>Unspecified</span>
        </p>
      </div>
      <div class="text-center"><label class="font-bold">Free to dive</label>
        <p>Unspecified</p>
      </div>
      <div class="text-center"><label class="font-bold">Shore dive</label>
        <p>Unspecified</p>
      </div>
    </div>
  </div>
</li>"
`;

exports[`SelectDiveSiteListItem component will show as highlighted when selected property is true 1`] = `
"<li class="border border-success space-y-2 flex gap-2 items-center">
  <div><button class="text-grey-950 p-2 m-0 text-sm border-1 border-grey-800 shadow-sm shadow-grey-800 rounded-md disabled:text-grey-500 bg-secondary hover:bg-secondary-hover" data-testid="select-site-4f5fd49f-734a-4bb7-9912-d58b0f4d61ef" type="button">
      <!--v-if--> Select
    </button></div>
  <div class="grow space-y-2">
    <div class="flex align-baseline justify-between"><button data-testid="site-name-4f5fd49f-734a-4bb7-9912-d58b0f4d61ef">
        <p class="text-xl font-title capitalize hover:text-link-hover">Awesome Site 7</p>
      </button>
      <!--v-if-->
    </div>
    <div class="">
      <!--v-if-->
    </div>
    <div class="flex justify-between text-sm">
      <div class="text-center"><label class="font-bold">Location</label>
        <p>Somewhere</p>
      </div>
      <div class="text-center"><label class="font-bold">Depth</label>
        <p>
          <!--v-if--><span>Unspecified</span>
        </p>
      </div>
      <div class="text-center"><label class="font-bold">Free to dive</label>
        <p>Unspecified</p>
      </div>
      <div class="text-center"><label class="font-bold">Shore dive</label>
        <p>Unspecified</p>
      </div>
    </div>
  </div>
</li>"
`;
